--- a/includes/admin_levels.html
+++ b/includes/admin_levels.html
@@ -1,6 +1,13 @@
 <table>
 <tr>
-	<td style='color: #8bc34a; font-size: 2em;'>Levels</td>
+	<td style='color: #8bc34a; font-size: 2em;'>
+	  <a href="" ng-click="helpToast('Add levels with low and high point boundaries.<br>Ensure your levels points are consecutive.',5000,'black')">
+        	<svg class="svg-class" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+          	<ellipse ry="11" rx="11" cy="12" cx="12" stroke="#2196f3" fill="#fff"/>
+          	<text font-style="normal" transform="matrix(2.25929, 0, 0, 0.870395, -7.11379, -0.393831)" xml:space="preserve" text-anchor="start" font-family="Helvetica, Arial, sans-serif" font-size="16" id="svg_2" y="20" x="6.5" stroke-width="0" stroke="#2196f3" fill="#2196f3">i</text>
+        	</svg>
+      	  </a>
+	</td>
 	<td><a ng-click="addlevel()" class="waves-effect waves-light btn right light-green">Add</a></td>
 </tr>
 </table>
@@ -19,7 +26,7 @@
 						<a class="waves-effect waves-light btn light-green" ng-click="$scope.showedit = !$scope.showedit">Details</a>
 				    	<a class="waves-effect waves-light btn pink" ng-click="removelevel($index)">Delete</a>
 				    </div>
-
+					<br>
 					<div ng-show="$scope.showedit">
 						<div class="input-field col s6">
 							<input class="TextBox" id="low" type="number" validate="number" min=0 max=1000 ng-model="item.low" ng-init="finishLoading()"/>
