--- a/includes/admin_badges.html
+++ b/includes/admin_badges.html
@@ -1,6 +1,13 @@
 <table>
 <tr>
-	<td style='color: #8bc34a; font-size: 2em;'>Badges</td>
+	<td style='color: #8bc34a; font-size: 2em;'>Badges
+		<a href="" ng-click="helpToast('Name and assign an icon to your badge.',5000,'black')">
+        	<svg class="svg-class" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+          		<ellipse ry="11" rx="11" cy="12" cx="12" stroke="#2196f3" fill="#fff"/>
+          		<text font-style="normal" transform="matrix(2.25929, 0, 0, 0.870395, -7.11379, -0.393831)" xml:space="preserve" text-anchor="start" font-family="Helvetica, Arial, sans-serif" font-size="16" id="svg_2" y="20" x="6.5" stroke-width="0" stroke="#2196f3" fill="#2196f3">i</text>
+        	</svg>
+      		</a>
+	</td>
 	<td><a ng-click="addbadge()" class="waves-effect waves-light btn right light-green">Add</a></td>
 </tr>
 </table>
