format, remove text from svg

--- a/includes/404.html
+++ b/includes/404.html
@@ -1,3 +1,4 @@
+<div class="col s12 m6">
 <svg
    xmlns="http://www.w3.org/2000/svg"
    viewBox="0 0 200 80"
@@ -152,38 +153,12 @@
      cy="39.96875"
      id="svg_29"
      ry="2.15625" />
-  <text
-     xml:space="preserve"
-     style="font-style:normal;font-weight:normal;font-size:10px;line-height:125%;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;fill:#000000;fill-opacity:1;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
-     x="100"
-     y="38.045456"
-     id="text3363"><tspan
-       id="tspan3365"
-       x="100"
-       y="38.045456">Sorry. </tspan><tspan
-       id="tspan3364"
-       x="100"
-       y="38.045456" /></text>
-  <text
-     id="text3366"
-     y="38.441559"
-     x="99.675323"
-     style="font-style:normal;font-weight:normal;font-size:10px;line-height:125%;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;fill:#000000;fill-opacity:1;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
-     xml:space="preserve"><tspan
-       y="38.441559"
-       x="99.675323"
-       id="tspan3368" /></text>
-  <text
-     id="text3370"
-     y="50.064934"
-     x="99.675323"
-     style="font-style:normal;font-weight:normal;font-size:10px;line-height:125%;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;fill:#000000;fill-opacity:1;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
-     xml:space="preserve"><tspan
-       y="50.064934"
-       x="99.675323"
-       id="tspan3372">{{error}}</tspan></text>
   <path
      id="path3380"
      d="M 35.414282,62.955131 C 53.370839,57.54134 53.370839,57.928038 53.370839,57.928038"
      style="fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1" />
 </svg>
+</div>
+<div class="col s12 m6">
+<p style="font-size: 2em;">Sorry, something expected happened.<br>{{error}}</p>
+</div>
