fixed missing title

--- a/includes/admin_levels.html
+++ b/includes/admin_levels.html
@@ -1,6 +1,6 @@
 <table>
 <tr>
-	<td style='color: #8bc34a; font-size: 2em;'>
+	<td style='color: #8bc34a; font-size: 2em;'>Levels
 	  <a href="" ng-click="helpToast('Add levels with low and high point boundaries.<br>Ensure your levels points are consecutive.',5000,'black')">
         	<svg class="svg-class" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
           	<ellipse ry="11" rx="11" cy="12" cx="12" stroke="#2196f3" fill="#fff"/>
