changed about button

--- a/includes/nav_signin.html
+++ b/includes/nav_signin.html
@@ -1,2 +1,2 @@
-<a href="" ng-click="nav('includes/about.html')" class="left">About</a>
+<a ng-click="nav('includes/about.html')" class="btn light-green white-text left">About</a>
 <a ng-click="signin()" class="btn blue white-text right">Sign in</a>
