Shorter sorry msg

--- a/includes/404.html
+++ b/includes/404.html
@@ -160,5 +160,5 @@
 </svg>
 </div>
 <div class="col s12 m6">
-<p style="font-size: 2em;">Sorry, something expected happened.<br>{{error}}</p>
+<p style="font-size: 2em;">Sorry. Oops.<br>{{error}}</p>
 </div>
