--- a/includes/student_view.html
+++ b/includes/student_view.html
@@ -9,7 +9,7 @@
               </tr>
               <tr>
                 <td>
-                  {{user.level.desc}}
+                  Level up for privilages and to win the game
                 </td>
               </tr>
             </table>
@@ -31,7 +31,7 @@
           <table>
             <tr>
               <td>
-                Daily observations from the teacher to help you improve
+                Teacher observations to help you improve
               </td>
             </tr>
           </table>
@@ -78,7 +78,7 @@
           <table>
             <tr>
               <td>
-                Quizzes reward good work habits and diagnose problems.
+                Quizzes reward good habits and diagnose problems.
               </td>
             </tr>
           </table>
