--- a/includes/about.html
+++ b/includes/about.html
@@ -1,2 +1,24 @@
+<table>
+<tr>
+	<td style='color: #8bc34a; font-size: 2em;'>About us</td>
+</tr>
+</table>
 
-Coming soon.    
+<div class="row">
+<div class="col s12 m6">
+  <div class="card hoverable">
+    <div class="card-image">
+      <img ng-src="images/about.png"/>
+    </div>
+  </div>
+</div>
+<div class="col s12 m6">
+    <div class="card-panel white hoverable">
+    	<p style="vertical-align: top; padding-top: 0px; margin-top: 0px;"><span style="font-size: 3em; font-family: times;">gameof5</span><br>
+    	Noun  -  / game-of-5 /</p>
+    	<p>A play on the term education term gamify. To gamify is to introduce elements of game play into learning to increase student engagement. Gameof5 is a webapp that helps teachers organize, structure and most importantly gamify their courses.</p>
+    </div>
+    <div class="card-panel white hoverable">
+    	<p>Gameof5 began with a wish to structure and present course material, as well as track what was happening in the classroom. Gameof5 evolved with student requests to level up, collect badges, see quiz results, and daily report comments. They want to earn as they learn and have fun. I hope you can level up your courses using gameof5.</p>
+    </div>
+</div>   
