updated text, point to svg image

--- a/includes/about.html
+++ b/includes/about.html
@@ -8,7 +8,7 @@
 <div class="col s12 m6">
   <div class="card hoverable">
     <div class="card-image">
-      <img ng-src="images/about.png"/>
+      <img ng-src="images/about.svg"/>
     </div>
   </div>
 </div>
@@ -16,9 +16,9 @@
     <div class="card-panel white hoverable">
     	<p style="vertical-align: top; padding-top: 0px; margin-top: 0px;"><span style="font-size: 3em; font-family: times;">gameof5</span><br>
     	Noun  -  / game-of-5 /</p>
-    	<p>A play on the term education term gamify. To gamify is to introduce elements of game play into learning to increase student engagement. Gameof5 is a webapp that helps teachers organize, structure and most importantly gamify their courses.</p>
+    	<p>A play on the education term <a href='https://en.wikipedia.org/wiki/Gamification_of_learning' target='_blank'>gamify</a>. To gamify is to introduce elements of game play into learning to increase student engagement. Gameof5 helps teachers organize, structure, and most importantly gamify their courses.</p>
     </div>
     <div class="card-panel white hoverable">
-    	<p>Gameof5 began with a wish to structure and present course material, as well as track what was happening in the classroom. Gameof5 evolved with student requests to level up, collect badges, see quiz results, and daily report comments. They want to earn as they learn and have fun. I hope you can level up your courses using gameof5.</p>
+      <p>Gameof5 began as a system to structure and present course material, as well as track what was happening in my classroom. Gamification evolved with student expectations to 'earn as they learn'. In other words students wanted to <i>level up</i>, much like they would in a video game or social media. I have had a lot of fun building gameof5 and sharing it with my students. I hope you can level up your lessons using gameof5.</p>
     </div>
-</div>   
+</div>
