switched back to admin_signin only

--- a/includes/nav_signin.html
+++ b/includes/nav_signin.html
@@ -1,3 +1,3 @@
 <a ng-hide="filePath=='includes/about.html'" ng-click="nav('includes/about.html')" class="btn light-green white-text left">About</a>
-<a ng-hide="filePath=='includes/admin_signin.html' || filePath=='includes/student_signin.html'" ng-click="nav('includes/admin_signin.html')" class="btn light-green white-text left">Home</a>
+<a ng-hide="filePath=='includes/admin_signin.html'" ng-click="nav('includes/admin_signin.html')" class="btn light-green white-text left">Home</a>
 <a ng-click="signin()" class="btn blue white-text right">Sign in</a>
