switched to {{signinText}}

--- a/includes/admin_signin.html
+++ b/includes/admin_signin.html
@@ -178,7 +178,7 @@
 </svg>
 </div>
 <div class="col s12 m6">
-<p style="font-size: 2em; padding-bottom: 0px;">Engage Students.<br>Organize Yourself.<br>Gamify.
+<p style="font-size: 2em; padding-bottom: 0px;">{{signinText}}
 <a href="" ng-click="helpToast('Sign in with your Google Account.',3000,'black')">
         <svg class="svg-class" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
           <ellipse ry="11" rx="11" cy="12" cx="12" stroke="#2196f3" fill="#fff"/>
