--- a/includes/admin_signin.html
+++ b/includes/admin_signin.html
@@ -1,4 +1,5 @@
-<div class="col s12 m6">
+<div class="row">
+ <div class="col s12 m6">
  <svg
    xmlns:svg='http://www.w3.org/2000/svg'
    viewBox='0 0 200 80'
@@ -72,7 +73,7 @@
      cx='77.817001'
      stroke-opacity='null'
      stroke='null' />
-  4.5<ellipse style='fill:#ffffff;stroke:#000000;stroke-width:0.45228916' ry='4.5' rx='4.5' id='lefteye' cy='29' cx='32' />
+  <ellipse style='fill:#ffffff;stroke:#000000;stroke-width:0.45228916' ry='4.5' rx='4.5' id='lefteye' cy='29' cx='32' />
   <ellipse style='fill:#2196f3;stroke-width:1.5' ry='2.5' rx='2.5' id='leftpupil' cy='29' cx='32'/>
   <ellipse style='fill:#ffffff;stroke:#000000;stroke-width:0.45228916' ry='4.5' rx='4.5' id='righteye' cy='29' cx='58' />
   <ellipse style='fill:#2196f3;stroke-width:1.5' ry='2.5' rx='2.5' id='rightpupil' cy='29' cx='58'/>
@@ -174,7 +175,6 @@
     dur="1.5s"
     />
 
-
 </svg>
 </div>
 <div class="col s12 m6">
@@ -185,4 +185,5 @@
           <text font-style="normal" transform="matrix(2.25929, 0, 0, 0.870395, -7.11379, -0.393831)" xml:space="preserve" text-anchor="start" font-family="Helvetica, Arial, sans-serif" font-size="16" id="svg_2" y="20" x="6.5" stroke-width="0" stroke="#2196f3" fill="#2196f3">i</text>
         </svg>
       </a></p>
+</div>
 </div>
