added row div for firefox

--- a/includes/admin_splash.html
+++ b/includes/admin_splash.html
@@ -1,3 +1,4 @@
+<div class="row">
 <div class="col s12 m6">
 <svg
    xmlns="http://www.w3.org/2000/svg"
@@ -189,4 +190,5 @@ style="fill:#ffffff;fill-rule:evenodd;stroke:#000000;stroke-width:0.75px;stroke-
         </svg>
       </a>
 <br>Save your work often!</p>
+</div>
 </div>
