add ng-show to seglink

--- a/includes/lessons_one.html
+++ b/includes/lessons_one.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="card-content">
                   <p>{{item.text}}</p>
-                  <a href="{{item.seglink}}" target="_blank">Link</a>
+                  <a href="{{item.seglink}}" ng-show="item.seglink != ''" target="_blank">Link</a>
                 </div>
               </div>
               </div>
