message below image

--- a/includes/about.html
+++ b/includes/about.html
@@ -9,6 +9,7 @@
   <div class="card hoverable">
     <div class="card-image">
       <img ng-src="images/about.svg"/>
+      <div align="center"><i>Earn as you learn - Score points - Get badges - Level up.</i></div>
     </div>
   </div>
 </div>
