--- a/includes/admin_courses.html
+++ b/includes/admin_courses.html
@@ -1,7 +1,7 @@
 <table>
   <tr>
     <td style='color: #8bc34a; font-size: 2em;'>
-      Registered Courses
+      Courses
       <a href="" ng-click="helpToast('Register or edit a course. Limit of 5.<br>Caution: data retrieved on name.<br>Changing will register new course.',5000,'black')">
         <svg class="svg-class" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
           <ellipse ry="11" rx="11" cy="12" cx="12" stroke="#2196f3" fill="#fff"/>
@@ -20,7 +20,7 @@
       	<div class="row">
         	<div class="input-field">
             	<input id="name" type="text" maxlength="20" ng-model="item.name" ng-change="checkCname(item.name,$index)">
-                <label class='md-no-float' for="name">Course name (no spaces or special chars #/[].$)</label>
+                <label class='md-no-float' for="name">Course name (no spaces or #/[].$)</label>
             </div>
             <div class="input-field">
                 <input id="descname" type="text" ng-model="item.descname">
