--- a/includes/student_level.html
+++ b/includes/student_level.html
@@ -15,8 +15,8 @@
 <div class="col s12 m6">
     <div class="card">
       <ul class="collection with-header">
-        <li class="collection-header blue white-text"><table><td><span class="card-title">Level {{user.level.number}}</span></td><td><span class="chip white blue-text right">{{user.pointstotal}}</span></td></table><p class="white-text"><i>{{user.level.desc}}</i></p></li>
-        <li class="collection-item"><table><td>Name</td><td><span class="right">{{user.level.name}}</span></td></table></li>
+        <li class="collection-header blue white-text"><table><td><span class="card-title">{{user.level.name}}</span></td><td><span class="chip white blue-text right">{{user.pointstotal}}</span></td></table>
+        <li class="collection-item"><table><td>Description</td><td><span class="right">{{user.level.desc}}</span></td></table></li>
         <li class="collection-item"><table><td>Privilage</td><td><span class="right">{{user.level.priv}}</span></td></table></li>
         <li class="collection-item"><table><td>Daily</td><td><span class="chip orange white-text right">{{user.dailytotal}}</span></td></table></li>
         <li class="collection-item"><table><td>Quizzes</td><td><span class="chip orange white-text right">{{user.quiztotal}}</span></td></table></li>
