re-added omitted <a>

--- a/includes/admin_list.html
+++ b/includes/admin_list.html
@@ -1,7 +1,8 @@
 <table>
 	<tr>
 	    	<td style='color: #8bc34a; font-size: 2em;'>List users <span style="font-size:1em;" ng-show="listArray[0].dateconfirmed != undefined">({{listArray[0].dateconfirmed}})</span>
-        			<svg class="svg-class" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+        		<a href="" ng-click="helpToast('View and rank registered students.<br>Confirm new students and calculate totals when saving.',5000,'black')">
+				<svg class="svg-class" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
           			<ellipse ry="11" rx="11" cy="12" cx="12" stroke="#2196f3" fill="#fff"/>
           			<text font-style="normal" transform="matrix(2.25929, 0, 0, 0.870395, -7.11379, -0.393831)" xml:space="preserve" text-anchor="start" font-family="Helvetica, Arial, sans-serif" font-size="16" id="svg_2" y="20" x="6.5" stroke-width="0" stroke="#2196f3" fill="#2196f3">i</text>
         			</svg>
