added show/hide buttons

--- a/includes/admin_lessons.html
+++ b/includes/admin_lessons.html
@@ -18,14 +18,21 @@
 <div ng-repeat="item in readonly.lessons">
 	<ul class="collection with-header">
 		<li class="collection-item">
-				 <div class="row">
-				 	<div class="input-field col s12">
-						<input id="name" type="text" maxlength="30" ng-model="item.name">
-				    	<label class='md-no-float' for="name" data-error="wrong" data-success="right">Name (30 chars)</label>
-					</div>
-
-				 </div>
-				 <div>
+			<div class="input-field col s6">
+				<input id="name" type="text" maxlength="30" ng-model="item.name">
+				<label class='md-no-float' for="name" data-error="wrong" data-success="right">Name (30 chars)</label>
+			</div>
+			<div class="input-field col s6">
+				<button class="btn-small btn-primary pull-right gray" ng-click="item.show=!item.show" ng-if="!item.show">Hide</button>
+				<button class="btn-small btn-danger pull-right gray" ng-click="item.show=!item.show" ng-if="item.show">Show</button>
+				<a href="" ng-click="helpToast('Click button to toggle between showing full lesson or only title to users.',5000,'black')">
+        				<svg class="svg-class" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+          					<ellipse ry="11" rx="11" cy="12" cx="12" stroke="#2196f3" fill="#fff"/>
+          					<text font-style="normal" transform="matrix(2.25929, 0, 0, 0.870395, -7.11379, -0.393831)" xml:space="preserve" text-anchor="start" font-family="Helvetica, Arial, sans-serif" font-size="16" id="svg_2" y="20" x="6.5" stroke-width="0" stroke="#2196f3" fill="#2196f3">i</text>
+        				</svg>
+      				</a>
+				</div>
+			<div>
 				 	<a class="waves-effect waves-light btn light-green" ng-click="$scope.showdetails = !$scope.showdetails">Details</a>
 				    <a class="waves-effect waves-light btn light-green" ng-click="$scope.showsegments = !$scope.showsegments">Segments</a>
 				    <a class="waves-effect waves-light btn blue" ng-disabled="$index == 0" ng-click="uplesson($index)">Up</a>
